apps/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test # overridden by the overlay
