apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    match_labels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      # custom ServiceAccount
      serviceAccountName: webapp-sa
      containers:
      - name: nginx
        image: nginx:1.25.0 # just to test automation later
# CPU and mem limits so HPA can calculate load
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        runAsNonRoot: true
